# suplalite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: client.py  device.py  server.py
suplalite/: encoding.py  logging.py  network.py  packets.py  proto.py  utils.py
suplalite/device/: __init__.py  channels.py
suplalite/server/: __init__.py  api.py  context.py  handlers.py  state.py
tests/: conftest.py  device_test.py  encoding_test.py  packets_test.py  proto_test.py  server_test.py  utils_test.py
typings/tlslite/: __init__.pyi  api.pyi  errors.pyi
typings/tlslite/utils/: __init__.pyi  rsakey.pyi
