[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "suplalite"
dynamic = ['version']
description = "A lightweight implementation of SUPLA server and devices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "tlslite-ng",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "aiohttp",
    "hatch-vcs",
    "hatchling",
    "pre-commit",
    "pyright==1.1.410",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "ruff==0.15.15",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
features = ["dev"]
post-install-commands = [
    "pre-commit install",
    "mkdir -p ssl",
    'openssl req -new -x509 -days 365 -nodes -subj "/C=/ST=/L=/O=/CN=" -out ssl/server.cert -keyout ssl/server.key',
]

[tool.hatch.envs.default.scripts]
test = [
    "pre-commit run --all-files",
    "pytest --cov suplalite --cov tests --cov-report html:htmlcov --cov-fail-under=100 -n auto",
]

[tool.pytest.ini_options]
# filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
log_level = "DEBUG"
log_format = "[%(levelname)s] [%(name)s] %(message)s"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Any type hints
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "COM812", # trailing comma (conflicts with formatter)
    "D100", # module docstrings
    "D101", # class docstrings
    "D102", # method docstrings
    "D103", # function docstrings
    "D104", # package docstrings
    "D105", # magic method docstrings
    "D106", # nested class docstrings
    "D107", # __init__ docstrings
    "D203", # docstring format (conflicts with D211)
    "D213", # docstring format (conflicts with D212)
    "EM101", # no string literals in exceptions
    "EM102", # no f-string literals in exceptions
    "FIX001", # FIXMEs
    "FIX002", # TODOs
    "PLR0913", # too many arguments
    "PLR2004", # magic constants
    "S101", # use of assert
    "TC001", # place typing imports in type-check block
    "TC002", # place typing imports in type-check block
    "TC003", # place typing imports in type-check block
    "TD001", # FIXMEs
    "TD002", # TODO author
    "TD003", # TODO links
    "TRY003", # messages outside exception class
    # FIX THE FOLLOWING
    "S",
    "PLR",
    "C",
    "PT",
    "FBT",
    "LOG",
    "T",
    "ASYNC",
    "ANN",
    "B",
    "G",
    "PTH",
    "N",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.coverage.run]
branch = true
omit = [
    "suplalite/logging.py", # FIXME: enable this
    "tests/conftest.py",
]
